# shop

./: .dockerignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deployment.yaml  docker-compose.yml  pyproject.toml  service.yaml  setup.cfg
.github/workflows/: python-tests.yml
djangotemplate/: asgi.py  settings.py  urls.py  wsgi.py
products/: asgi.py  settings.py  urls.py  wsgi.py
shop/: settings.py  urls.py
