[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["mairaafreitas <maira.oliveirafreitas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.2"
psycopg2-binary= "^2.9.1"

[tool.poetry.group.dev.dependencies]
### pre-commit dependencies
pre-commit = "^3.3.3"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.6.5"
autoflake = "^2.1.1"
types-requests = "^2.31.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
